	'lib/statecombobox.cpp' and 'lib/state_conv.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/list_affiliates.cpp' that caused incorrect
	values to appear in the 'License City/State' column after editing
	an affiliate record.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affidavit_report.cpp' that caused lines
	to be triple space in the 'Affidavit Contacts' report.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Changed '-calc' switch for soffice(1) to '--calc'.
2014-12-11 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'Missing Affidavit Contacts' report to show Station
	Call and Phone Number.
2014-12-11 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Program by Market' report in
	'davit/programbymarket_report.cpp'.
2014-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a spreadsheet rendering system in 'lib/spread_*.
2014-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Added Programs' and 'Deleted Programs' report to use
	spreadsheet rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Affidavit Contacts' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Affiliate Activity' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'All Affiliates', 'Affiliates by Daypart',
	'Affiliates by Network', 'Affiliates by Program',
	'Affiliates by Program/DMA Market', Affiliates by Program/MSA Market',
	'Affiliate/Contacts by Program' reports to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Arbitron' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Programs by City/State', 'Programs by DMA Market'
	and 'Programs by MSA Market' reports to use the spreadsheet
	rendering library.