@@ -745,3 +745,6 @@
 	* Converted 'Programs by City/State', 'Programs by DMA Market'
 	and 'Programs by MSA Market' reports to use the spreadsheet
 	rendering library.
+2014-12-19 Fred Gleason <fredg@paravelsystems.com>
+	* Converted 'Missing Affidavit Contacts' report to use the
+	spreadsheet rendering library.
